[projects] crm_ver3 : 차트 및 통계 추가

--- a/projects/crm_ver3/static/css/details.css
+++ b/projects/crm_ver3/static/css/details.css
@@ -47,3 +47,7 @@ center button:hover{
     cursor: pointer;
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
+
+canvas{
+    padding : 5%;
+}
