--- a/projects/crm_ver3/templates/details_base.html
+++ b/projects/crm_ver3/templates/details_base.html
@@ -7,6 +7,7 @@
     <style>
         @import url("../static/css/details.css");
     </style>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
 
